<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

	<EditText
        android:id="@+id/registerUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:hint="@string/username_text"
        android:inputType="textPersonName" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerUsername"
        android:layout_below="@+id/registerUsername"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registerPasswordVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerPassword"
        android:layout_below="@+id/registerPassword"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/register_retypePassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registerBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerPasswordVerification"
        android:layout_below="@+id/registerPasswordVerification"
        android:layout_centerInParent="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/register_balance"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/registerInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerBalance"
        android:layout_below="@+id/registerBalance"
        android:layout_centerInParent="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/register_interest"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerInterest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="registerClicked"
        android:text="@string/register_button_text" />

</RelativeLayout>