<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" 
    android:background="#ffffff"
    android:orientation="vertical" 
    android:padding="10dp">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deposit"/>
    
    <Spinner
        android:id="@+id/day_spinner_deposit"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    
    <Spinner
        android:id="@+id/month_spinner_deposit"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/day_spinner_deposit" />
    
    <Spinner
        android:id="@+id/year_spinner_deposit"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/day_spinner_deposit" />
    
    <Spinner 
        android:id="@+id/deposit_dialog_menu" 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
    
    <EditText 
        android:visibility="gone"
        android:id="@+id/deposit_dialog_other" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/other"/>
    
    <EditText 
        android:id="@+id/deposit_dialog_text" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/input_amount"/>
    

    
     <Button
        android:id="@+id/deposit_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/confirm"/>

</LinearLayout>
