<?xml version="1.0" encoding="utf-8"?>
<!-- Current login screen, DO NOT LAUGH AT MY BACKGROUND!!!(K3n0bi) -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coin_bg" >

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username_text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameEditText"
        android:layout_below="@+id/usernameEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="22dp"
        android:text="@string/login_button_text" 
        android:onClick="loginClicked" />

</RelativeLayout>
