<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DBTester" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:id="@+id/dbtester_textview" />

    <EditText
        android:id="@+id/dbtest_userid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/username_text" />

    <EditText
        android:id="@+id/dbtest_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dbtest_userid_text"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password_text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/dbtest_accounts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dbtest_pass_text"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/accounts_text" />

    <Button
        android:id="@+id/dbtest_write_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dbtest_accounts_text"
        android:layout_below="@+id/dbtest_accounts_text"
        android:text="Write" />

    <Button
        android:id="@+id/dbtest_read_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dbtest_write_button"
        android:layout_alignBottom="@+id/dbtest_write_button"
        android:layout_toRightOf="@+id/dbtest_write_button"
        android:text="Read" />

    <Button
        android:id="@+id/dbtest_clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dbtest_read_button"
        android:layout_alignBottom="@+id/dbtest_read_button"
        android:layout_toRightOf="@+id/dbtest_read_button"
        android:text="Clear" />

    <Button
        android:id="@+id/dbtest_addAccount_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dbtest_write_button"
        android:layout_below="@+id/dbtest_write_button"
        android:text="AddAccount" />

"

</RelativeLayout>
